--- a/src/main/webapp/WEB-INF/templates/customer/customer.html
+++ b/src/main/webapp/WEB-INF/templates/customer/customer.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en">
 <head>
-    <title>JavaBank</title>
+    <title>Customer</title>
     <meta charset="UTF-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"
@@ -13,7 +13,6 @@
 <body>
 <div class="container">
     <h2>Customer List</h2>
-    <div th:if="${not #lists.isEmpty(customers)}">
         <table class="table table-striped">
             <tr>
                 <th>Id</th>
@@ -21,21 +20,30 @@
                 <th>Last Name</th>
                 <th>Email</th>
                 <th>Phone</th>
-                <th>Show</th>
-                <th>Delete</th>
             </tr>
-            <tr th:each="customer : ${customers}">
+            <tr th:each="customer : ${customer}">
                 <td th:text="${customer.id}"></td>
                 <td th:text="${customer.firstName}"></td>
                 <td th:text="${customer.lastName}"></td>
                 <td th:text="${customer.email}"></td>
                 <td th:text="${customer.phone}"></td>
-                <td><a th:href="@{'/customer/' + ${customer.id}}"> View</a></td>
-                <td><a th:href="@{'/customer/' + ${customer.id} + '/delete'}">Delete</a></td>
             </tr>
         </table>
+
+        <h1>Accounts:</h1>
+        <table class="table accounts">
+            <tr>
+                <th>#</th>
+                <th>Balance</th>
+            </tr>
+
+            <tr th:each="account : ${accounts}">
+                <td th:text="${account.id}"></td>
+                <td th:text="${account.balance}"></td>
+            </tr>
+        </table>
+        <button type="button" class="btn btn-light"><a th:href="@{'/customer/list'}">Customer List</a></button>
     </div>
 </div>
 </body>
 </html>
-
