--- a/src/main/webapp/WEB-INF/templates/customer/list.html
+++ b/src/main/webapp/WEB-INF/templates/customer/list.html
@@ -15,6 +15,7 @@
                 <th>Email</th>
                 <th>Phone</th>
                 <th>Show</th>
+                <th>Edit</th>
                 <th>Delete</th>
             </tr>
             <tr th:each="customer : ${customers}">
@@ -24,6 +25,7 @@
                 <td th:text="${customer.email}"></td>
                 <td th:text="${customer.phone}"></td>
                 <td><a th:href="@{'/customer/' + ${customer.id}}">View</a></td>
+                <td><a th:href="@{'/customer/' + ${customer.id}}">Edit</a></td>
                 <td><a th:href="@{'/customer/' + ${customer.id} + '/delete'}">Delete</a></td>
             </tr>
         </table>
