--- a/src/main/webapp/WEB-INF/templates/customer/list.html
+++ b/src/main/webapp/WEB-INF/templates/customer/list.html
@@ -25,10 +25,12 @@
                 <td th:text="${customer.email}"></td>
                 <td th:text="${customer.phone}"></td>
                 <td><a th:href="@{'/customer/' + ${customer.id}}">View</a></td>
-                <td><a th:href="@{'/customer/' + ${customer.id}}">Edit</a></td>
+                <td><a th:href="@{'/customer/' + ${customer.id} + '/edit'}">Edit</a></td>
                 <td><a th:href="@{'/customer/' + ${customer.id} + '/delete'}">Delete</a></td>
             </tr>
         </table>
+
+        <button><a th:href="@{'/customer/newcostumer'}">New Costumer</a></button>
     </div>
 </div>
 </body>
